--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,20 +3,20 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/ic_search"
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:id="@+id/navigation_posting"
+        android:icon="@drawable/ic_addpost"
         android:title="@string/title_notifications" />
     <item
         android:id="@+id/navigation_rank"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_rank"
         android:title="@string/title_rank" />
 </menu>
