--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,20 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.myapp.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_posting"
+        android:name="com.example.myapp.ui.postUI.postUIFrangment"
+        android:label="Post"
+        tools:layout="@layout/fragment_posting" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.myapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_search"
+        android:name="com.example.myapp.ui.searchUI.searchUIFragment"
+        android:label="search"
+        tools:layout="@layout/frament_search" />
+
+    <fragment
+        android:id="@+id/navigation_rank"
+        android:name="com.example.myapp.ui.rankUI.rankUIFragment"
+        android:label="rank"
+        tools:layout="@layout/fragment_rank" />
 </navigation>
