--- a/app/src/main/res/layout/fragment_posting.xml
+++ b/app/src/main/res/layout/fragment_posting.xml
@@ -3,28 +3,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/post_fragment">
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_account" />
+
+
+    <EditText
+        android:id="@+id/review_Text"
+        android:layout_width="339dp"
+        android:layout_height="186dp"
+        android:background="@drawable/review_shape"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:maxLength="200"
+        android:maxLines="3"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="15dp"
+        android:text="리뷰를 작성해주세요"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.164" />
 
     <TextView
-        android:id="@+id/text_posting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
+        android:id="@+id/textLimitView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="248dp"
-        android:text="Button"
+        android:layout_gravity="right"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="0.5"
+        android:hint="글자수"
+        app:layout_constraintBottom_toTopOf="@+id/review_Text"
+        app:layout_constraintEnd_toEndOf="@+id/review_Text"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.851" />
+
+    <EditText
+        android:id="@+id/tag_text"
+        android:layout_width="339dp"
+        android:layout_height="186dp"
+        android:background="@drawable/review_shape"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:maxLength="200"
+        android:maxLines="3"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="15dp"
+        android:text="태그를 추가해주세요"
+        app:layout_constraintBottom_toTopOf="@+id/sendText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/review_Text" />
+
+    <TextView
+        android:id="@+id/sendText"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_weight="0.5"
+        android:textColor="#000000"
+        android:text="작성하기"
+        android:gravity="center"
+        android:background="@drawable/send_shape"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
