--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -1,30 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:columnCount="2"
+    android:layout_gravity="center">
 
     <TextView
-        android:id="@+id/text_rank"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button3"
+        android:id="@+id/rank1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="248dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="1위" />
+
+    <Button
+        android:id="@+id/rank1_user_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rank1 username"/>
+
+    <TextView
+        android:id="@+id/rank2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2위" />
+
+    <Button
+        android:id="@+id/rank2_user_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rank2 username"/>
+
+    <TextView
+        android:id="@+id/rank3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3위" />
+
+    <Button
+        android:id="@+id/rank3_user_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rank3 username"/>
+
+    <TextView
+        android:id="@+id/rank4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4위" />
+
+    <Button
+        android:id="@+id/rank4_user_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rank4 username"/>
+
+    <TextView
+        android:id="@+id/rank5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5위" />
+
+    <Button
+        android:id="@+id/rank5_user_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rank5 username"/>
+</GridLayout>
+
+
+
+
+
+
+
+
+
