--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -9,13 +9,15 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="0dp"
         android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/textLimitView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_account" />
-
 
     <EditText
         android:id="@+id/review_Text"
@@ -42,13 +44,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="535dp"
         android:layout_weight="0.5"
         android:hint="글자수"
-        app:layout_constraintBottom_toTopOf="@+id/review_Text"
-        app:layout_constraintEnd_toEndOf="@+id/review_Text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/reviewText"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.851" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/tag_text"
@@ -67,17 +70,17 @@
         app:layout_constraintBottom_toTopOf="@+id/sendText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/review_Text" />
+        app:layout_constraintTop_toBottomOf="@+id/reviewText" />
 
     <TextView
         android:id="@+id/sendText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="0.5"
-        android:textColor="#000000"
-        android:text="작성하기"
-        android:gravity="center"
         android:background="@drawable/send_shape"
+        android:gravity="center"
+        android:text="작성하기"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
