--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,23 +9,23 @@
         android:id="@+id/navigation_home"
         android:name="com.example.myapp.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/home_layout" />
 
     <fragment
         android:id="@+id/navigation_posting"
         android:name="com.example.myapp.ui.postUI.postUIFrangment"
         android:label="Post"
-        tools:layout="@layout/fragment_posting" />
+        tools:layout="@layout/post_layout" />
 
     <fragment
         android:id="@+id/navigation_search"
         android:name="com.example.myapp.ui.searchUI.searchUIFragment"
         android:label="search"
-        tools:layout="@layout/frament_search" />
+        tools:layout="@layout/search_layout" />
 
     <fragment
         android:id="@+id/navigation_rank"
         android:name="com.example.myapp.ui.rankUI.rankUIFragment"
         android:label="rank"
-        tools:layout="@layout/fragment_rank" />
+        tools:layout="@layout/rank_layout" />
 </navigation>
