--- a/app/src/main/res/layout/rank_layout.xml
+++ b/app/src/main/res/layout/rank_layout.xml
@@ -6,9 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.esenmobile.dho.activity.MainContentDetailActivity"
-    tools:showIn="@layout/activity_main_content_detail">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <!--
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
