--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorSecondary">#aa00ff</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorWeakBlue">#666676FF</color>
+    <color name="colorRed">#ff2026</color>
+    <color name="colorAmber">#FFC400</color>
 </resources>
