로그인 화면 디자인
로그인 화면 디자인

--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -13,12 +13,9 @@
             android:layout_weight="4"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            android:background="@drawable/login_background"/>
         //android:src="@drawable/ic_account"
-        <View
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
     </LinearLayout>
 
 
@@ -34,6 +31,7 @@
             android:textSize="40sp"
             android:textColor="#fff"
             android:text="LOGIN"
+            android:background="#0000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -47,7 +45,8 @@
             android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@drawable/ic_account"
+            android:background="@drawable/borderline"
+
             android:textSize="17sp" />
         <EditText
             android:id="@+id/login_pw"
@@ -60,13 +59,13 @@
             android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@drawable/ic_account"
+            android:background="@drawable/borderline"
             android:textSize="17sp" />
         <Button
             android:id="@+id/login_button"
             android:paddingRight="20dp"
             android:paddingLeft="20dp"
-            android:background="@drawable/ic_account"
+            android:background="@drawable/borderline"
             android:text="LOGIN"
             android:textColor="#777"
             android:layout_width="wrap_content"
@@ -98,16 +97,16 @@
             android:layout_height="wrap_content">
             <ImageButton
                 android:layout_marginRight="15dp"
-                android:background="@drawable/ic_account"
+                android:background="@drawable/ic_logo_google"
                 android:layout_width="40dp"
                 android:layout_height="40dp" />
             <ImageButton
                 android:layout_marginRight="15dp"
-                android:background="@drawable/ic_account"
+                android:background="@drawable/ic_logo_facebook"
                 android:layout_width="40dp"
                 android:layout_height="40dp" />
             <ImageButton
-                android:background="@drawable/ic_account"
+                android:background="@drawable/ic_logo_twitter"
                 android:layout_width="40dp"
                 android:layout_height="40dp" />
         </LinearLayout>
