--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="colorWeakBlue">#666676FF</color>
     <color name="colorRed">#ff2026</color>
     <color name="colorAmber">#FFC400</color>
+    <color name="colorgreen">#00B64F</color>
 </resources>
+
