드로어 아이콘
드로어 아이콘

--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -3,27 +3,27 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_tip"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_tip"
             android:title="혼플 꿀팁"
             />
         <item
             android:id="@+id/drawer_store"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_exp"
             android:title="경험치 상점"
             />
         <item
             android:id="@+id/drawer_event"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_event"
             android:title="이벤트"
             />
         <item
             android:id="@+id/drawer_noti"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_notice"
             android:title="공지사항"
             />
         <item
             android:id="@+id/drawer_cs"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_question"
             android:title="1:1 문의"
             />
     </group>
